--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jonathan Wright</h1>
-							<p class="major">Software Engineer</p>
+							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -51,7 +51,7 @@
 							<h2>Happy Helper</h2>
 							<p>This project was built with Python Django It also has similar database interaction as tv shows, using Djangos built in sqlite. Using Bcrypt and other validation, you could use your real information and it would be safe. I wouldn't though because I'm paranoid. Login or register to start posting your tasks or accept tasks from others! </p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Check out the repo</a></li>
+								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/belt_exam" class="button">Check out the repo</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -62,14 +62,14 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
+							<h2>P & D Towing</h2>
+							<p>Fill out a simple form and have the nearest vehicle service provider headed your direction. Using Google maps API, Amazon SMS, and Djangos built in email messaging.</p>
+							<!-- <ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/P&DT.png" alt="" />
 						</div>
 					</section>
 
