--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jonathan Wright</h1>
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/Banapple01" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+							</ul>
 							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -76,21 +80,21 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>Jo_Project</h2>
+							<p>Cookie Clicker / Universal Paperclips clone</p>
 						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="images/gallery/fulls/jomoney.png" class="image">
+										<img src="images/gallery/thumbs/jomoney.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Jo_Project</h3>
+										<p>Cookie Clicker / Universal Paperclips clone</p>
 										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small"><a href="http://3.139.102.31/">Site</a></span></li>
 										</ul>
 									</div>
 								</article>
@@ -329,16 +333,7 @@
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
-						<div class="inner">
-							<ul class="icons">
-								<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
-								<li><a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/Banapple01" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-						</div>
+						<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
