--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Jonathan Wright</h1>
+							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React</p>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/Banapple01" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
 							</ul>
-							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -87,9 +87,9 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/jomoney.png" class="image">
-										<img src="images/gallery/thumbs/jomoney.png" alt="" />
-									</a>
+									<!-- <a href="http://3.139.102.31/" class="image"> -->
+										<img src="images/gallery/thumbs/jomoney.png" alt="" height="250" width="360" class="image"/>
+									<!-- </a> -->
 									<div class="caption">
 										<h3>Jo_Project</h3>
 										<p>Cookie Clicker / Universal Paperclips clone</p>
