--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<!-- <a href="http://3.139.102.31/" class="image"> -->
-										<img src="images/gallery/thumbs/jomoney.png" alt="" height="250" width="360" class="image"/>
+										<img src="images/gallery/thumbs/jomoney.png" alt="" height="250 class="image"/>
 									<!-- </a> -->
 									<div class="caption">
 										<h3>Jo_Project</h3>
