--- a/index.html
+++ b/index.html
@@ -80,16 +80,14 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Jo_Project</h2>
-							<p>Cookie Clicker / Universal Paperclips clone</p>
+							<h2>More Projects</h2>
+							<p>Learning new tech is fun. I add more projects each week.</p>
 						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<!-- <a href="http://3.139.102.31/" class="image"> -->
-										<img src="images/gallery/thumbs/jomoney.png" alt="" height="250 class="image"/>
-									<!-- </a> -->
+										<img src="images/gallery/thumbs/jomoney.png" alt="Jo_money symbol" />
 									<div class="caption">
 										<h3>Jo_Project</h3>
 										<p>Cookie Clicker / Universal Paperclips clone</p>
