--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<h3>Jo_Project</h3>
 										<p>Cookie Clicker / Universal Paperclips clone</p>
 										<ul class="actions fixed">
-											<li><span class="button small"><a href="http://3.139.102.31/">Site</a></span></li>
+											<li><span class="button small"><a href="https://github.com/joshua-dweber/jo_project">Details</a></span></li>
 										</ul>
 									</div>
 								</article>
