--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>More Projects</h2>
-							<p>Learning new tech is fun. I add more projects each week.</p>
+							<p>Learning new tech is fun. I add more projects often.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -97,19 +97,19 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Bug Tracker</h3>
+										<p>Using Django as a backend and React as a frontend. Keep track of your project bugs and get other users suggestions on fixing them. (Still in progress.)</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -121,7 +121,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -133,7 +133,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -145,7 +145,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/06.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -157,7 +157,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/07.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -169,7 +169,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/08.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -181,7 +181,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/09.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -193,7 +193,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/10.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -205,7 +205,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/11.jpg" alt="" />
 									</a>
 									<div class="caption">
@@ -217,7 +217,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
+									<a href="#" class="image">
 										<img src="images/gallery/thumbs/12.jpg" alt="" />
 									</a>
 									<div class="caption">
