--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
+									<a href="images/gallery/thumbs/jomoney.png" class="image">
 										<img src="images/gallery/thumbs/jomoney.png" alt="Jo_money symbol" />
+									</a>
 									<div class="caption">
 										<h3>Jo_Project</h3>
 										<p>Cookie Clicker / Universal Paperclips clone</p>
