--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+		<link rel="stylesheet" href="./mycss/videocss.css">
 	</head>
 	<body class="is-preload">
 
@@ -23,8 +27,8 @@
 							<h1>Jonathan Wright</h1>
 							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React</p>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/Banapple01" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/Banapple01" target="_blank" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
 							</ul>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -41,7 +45,7 @@
 							<h2>TV Shows</h2>
 							<p>This Project was created using Python Django and MySQL as the Database. Keep track of all your favorite movies. Add more, edit the shows present or delete them entirely.</p>
 							<ul class="actions stacked">
-								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/tv_shows_proj" class="button">Check out the repo</a></li>
+								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/tv_shows_proj" target="_blank" class="button">Check out the repo</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -55,7 +59,7 @@
 							<h2>Happy Helper</h2>
 							<p>This project was built with Python Django It also has similar database interaction as tv shows, using Djangos built in sqlite. Using Bcrypt and other validation, you could use your real information and it would be safe. I wouldn't though because I'm paranoid. Login or register to start posting your tasks or accept tasks from others! </p>
 							<ul class="actions stacked">
-								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/belt_exam" class="button">Check out the repo</a></li>
+								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/belt_exam" target="_blank" class="button">Check out the repo</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -72,8 +76,15 @@
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul> -->
 						</div>
+						<div class="video" id="PDT" hidden="true">
+							<video id="pdtowing" width="100%" controls muted>
+								<source src="./video/zoom_0.mp4" type="video/mp4">
+								Your browser does not support HTML video.
+							</video>
+							<img src="images/icons8-macos-close-32.png" alt="close" class="close" onclick="toggle('PDT', 'pdtowing')"/>
+						</div>
 						<div class="image">
-							<img src="images/P&DT.png" alt="" />
+							<img src="images/P&DT.png" alt="Pickup & Delivery Towing" onclick="toggle('PDT', 'pdtowing')" />
 						</div>
 					</section>
 
@@ -87,14 +98,21 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/thumbs/jomoney.png" class="image">
-										<img src="images/gallery/thumbs/jomoney.png" alt="Jo_money symbol" />
-									</a>
+									<div class="video" id="JO" hidden="true">
+										<video id="jo_money" width="100%" controls muted>
+											<source src="./video/zoom_0.mp4" type="video/mp4">
+											Your browser does not support HTML video.
+										</video>
+										<img src="images/icons8-macos-close-32.png" alt="close" class="close" onclick="toggle('JO', 'jo_money')"/>
+									</div>
+									<img src="images/gallery/thumbs/jomoney.png" alt="Jo_money symbol" onclick="toggle('JO', 'jo_money')" />
 									<div class="caption">
 										<h3>Jo_Project</h3>
+										<p>video walk through</p>
+										<p>(click me!)</p>
 										<p>Cookie Clicker / Universal Paperclips clone</p>
 										<ul class="actions fixed">
-											<li><span class="button small"><a href="https://github.com/joshua-dweber/jo_project">Details</a></span></li>
+											<li><span class="button small"><a href="https://github.com/joshua-dweber/jo_project" target="_blank">Details</a></span></li>
 										</ul>
 									</div>
 								</article>
@@ -346,6 +364,15 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+			<script type="text/javascript">
+			function toggle(divId, videoId){
+				var videoDiv = document.querySelector(".video#" + divId)
+				var video = document.getElementById(videoId)
+				videoDiv.classList.toggle("active")
+				video.pause()
+			}
+			</script>
 
 	</body>
 </html>
