--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<li><a href="https://github.com/Banapple01" target="_blank" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
 							</ul>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#two" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -40,7 +40,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="two">
 						<div class="content">
 							<h2>TV Shows</h2>
 							<p>This Project was created using Python Django and MySQL as the Database. Keep track of all your favorite movies. Add more, edit the shows present or delete them entirely.</p>
