--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Jonathan W</title>
 		<meta charset="utf-8" />
@@ -14,6 +14,7 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+		<script src="https://kit.fontawesome.com/9351b69d72.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="./mycss/videocss.css">
 	</head>
 	<body class="is-preload">
@@ -22,16 +23,39 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" id="one">
 						<div class="content">
 							<h1>Jonathan Wright</h1>
 							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React</p>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" target="_blank" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/Banapple01" target="_blank" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+								<li>
+									<a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" target="_blank" class="icon brands style2 fa-linkedin-in">
+										<span class="label">
+											LinkedIn
+										</span>
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/Banapple01" target="_blank" class="icon brands style2 fa-github">
+										<span class="label">
+											Github
+										</span>
+									</a>
+								</li>
 							</ul>
+							<p class="major">
+								Contact me via 
+								<a href="mailto:wrightjonathan99@gmail.com? subject=I'm Interested" target="_blank" id="email">
+									email
+								</a> 
+								- wrightjonathan99@gmail.com or phone: 952-303-1811
+							</p>
 							<ul class="actions stacked">
-								<li><a href="#two" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li>
+									<a href="#two" class="button big wide smooth-scroll-middle">
+										Get Started
+									</a>
+								</li>
 							</ul>
 						</div>
 						<div class="image">
@@ -269,62 +293,62 @@
 							<p>Learning more every day</p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<!-- <span class="icon style2 major fa-gem"></span> -->
+									<span class="fab fa-js-square fa-2x"></span>
 									<h3>JavaScript</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-save"></span> -->
+									<span class="fab fa-python fa-2x"></span>
 									<h3>Python</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-leaf"></span> -->
+									<span class="fas fa-file-code fa-2x"></span>
 									<h3>HTML/CSS</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-chart-bar"></span> -->
-									<h3>Java</h3>
+									<span><img src="https://img.icons8.com/ios-filled/50/000000/jquery.png"/></span>
+									<h3>JQuery</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-wifi"></span> -->
+									<span><img src="https://img.icons8.com/windows/64/000000/django.png"/></span>
 									<h3>Django</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-cog"></span> -->
+									<span class="fab fa-react fa-2x"></span>
 									<h3>React</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon style2 major fa-paper-plane"></span> -->
+									<span class="fab fa-node fa-2x"></span>
 									<h3>Node.js</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-desktop"></span> -->
-									<h3>MySQL</h3>
+									<span><img src="https://img.icons8.com/ios-filled/100/000000/mysql-logo.png"/></span>
+									<!-- <h3>MySQL</h3> -->
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-sync-alt"></span> -->
+									<span><img src="https://img.icons8.com/color/48/000000/mongodb.png"/></span>
 									<h3>MongoDB</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-hashtag"></span> -->
+									<span><img src="https://img.icons8.com/ios-filled/50/000000/postgreesql.png"/></span>
 									<h3>PostgreSQL</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-bolt"></span> -->
+									<span><img src="https://img.icons8.com/wired/64/000000/postman-api.png"/></span>
 									<h3>Postman</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 								<section>
-									<!-- <span class="icon solid style2 major fa-envelope"></span> -->
+									<span><img src="https://img.icons8.com/material-sharp/48/000000/github.png"/></span>
 									<h3>Github</h3>
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
@@ -361,7 +385,11 @@
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
-						<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<a href="#one" class="button big wide smooth-scroll-middle" id="bottombutton">
+							Back to the top
+						</a>
+						<p>&copy; Untitled. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
+						<p>some icons from <a href="https://icons8.com" target="_blank">icons8.com</a></p>
 					</footer>
 
 			</div>
