--- a/index.html
+++ b/index.html
@@ -353,6 +353,13 @@
 									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
 								</section>
 							</div>
+							<p class="major">
+								Contact me via 
+								<a href="mailto:wrightjonathan99@gmail.com? subject=I'm Interested" target="_blank" id="email">
+									email
+								</a> 
+								- wrightjonathan99@gmail.com or phone: 952-303-1811
+							</p>
 						</div>
 					</section>
 
