--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Happy Helper</h2>
-							<p>This project was built with Python Django It also has similar database interaction as tv shows, using Djangos built in sqlite. Using Bcrypt and other validation, you could use your real information and it would be safe. I wouldn't though because I'm paranoid. Login or register to start posting your tasks or accept tasks from others! </p>
+							<p>This project was built with Python Django It also has similar database interaction as tv shows, using Djangos built in SQLite. Using Bcrypt and other validation, you could use your real information and it would be safe. I wouldn't though because I'm paranoid. Login or register to start posting your tasks or accept tasks from others! </p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/belt_exam" target="_blank" class="button">Check out the repo</a></li>
 							</ul>
